--- a/Seat/fade.html
+++ b/Seat/fade.html
@@ -53,15 +53,15 @@
         }
 
         .ClaroColombiaFade .bg.cover-1 {
-            background-image: url(https://i.imgur.com/GtylEce.jpg)
+            background-image: url(https://i.imgur.com/A7bwtFL.png)
         }
 
         .ClaroColombiaFade .bg.cover-2 {
-            background-image: url(https://i.imgur.com/IXLfgEc.jpg)
+            background-image: url(https://i.imgur.com/FrEqkqj.png)
         }
 
         .ClaroColombiaFade .bg.cover-3 {
-            background-image: url(https://i.imgur.com/DgIkxoL.jpg)
+            background-image: url(https://i.imgur.com/agugY0h.png)
         }
 
         .ClaroColombiaFade .bzm_cover.bzm_pos_tl {
@@ -246,15 +246,15 @@
 
 <body class="ClaroColombiaFade" style="margin:0px;">
    <div class="bzm_wrapper carousel-wrapper size_300x250">
-        <a href=" https://www.medplus.com.co/index.php/centro-de-investigacion/" style="display: block;" target="_blank">
+        <a href="http://www.seat.mx/autos/nuevo-leon-cupra/descubre.html" style="display: block;" target="_blank">
             <div class="carousel-container">
                 <div class="bzm_cover bg cover-1 carousel-item1 item-1"></div>
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:22px;"> ¡¡Investigación medica hecha en Colombia!!</span></div>
-            <div style="bottom:0px;height: 26px;text-align:left;margin-top:10px;"> <img src="https://i.imgur.com/fTRjCHr.jpg" style="height:28px;margin-top:10px;">
-                <div id="botones-para-compartir" style="display:inline;float:right;margin-top:-28px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.youtube.com/watch?v=knbNwQog4Ro" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="http://4.bp.blogspot.com/-2W3Fr7nS-T0/Uh1HrkLe5wI/AAAAAAAAAiQ/0-_aC8Yici4/s1600/facebook.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://www.youtube.com/watch?v=knbNwQog4Ro" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="http://3.bp.blogspot.com/-Ioy5JWv_nwk/Uh1HlxE8urI/AAAAAAAAAhc/q_uUabDAhsU/s1600/Google%252B%2Balt.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://www.youtube.com/watch?v=knbNwQog4Ro" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="http://3.bp.blogspot.com/-TgonF6vzJs0/Uh1Hmxqk8aI/AAAAAAAAAiA/MdT4pRWKRbI/s1600/twitter.png" title="compartir en twitter" width="22" /></a> </span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:20px;">La potencia y nueva tecnología que tu camino necesita</span></div>
+            <div style="bottom:0px;height: 26px;text-align:right;margin-top:0px;"> 
+              <img src="https://i.imgur.com/HYMzF3C.png" style="height:48px;margin-right:-15px;">
             </div>
         </a>
     </div>
