--- a/chile-gastronomia/Cube3d.html
+++ b/chile-gastronomia/Cube3d.html
@@ -504,7 +504,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Arial Narrow", sans-serif; font-size: 24px; color: #6b6767; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Arial Narrow", sans-serif; font-size: 22px; color: #6b6767; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 301px; height: 66px;
         -ms-transform: translate(-50%, -50%) translate(1px, 51px) rotate(0deg);
@@ -588,7 +588,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i5.i24.text.css:text/base/css*/
-#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Arial Narrow", sans-serif; font-size: 24px; color: #666565; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
+#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Arial Narrow", sans-serif; font-size: 22px; color: #666565; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
 #i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 304px; height: 61px;
         -ms-transform: translate(-50%, -50%) translate(3px, 49px) rotate(0deg);
@@ -801,7 +801,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Arial Narrow", sans-serif; font-size: 24px; color: #706f6f; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 0px;}
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Arial Narrow", sans-serif; font-size: 22px; color: #706f6f; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 0px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 300px; height: 55px;
         -ms-transform: translate(-50%, -50%) translate(1px, 57px) rotate(0deg);
@@ -996,7 +996,7 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 /* Name: On Click; */
 document.getElementById('i110').addEventListener('click', function(e){
     /*#i120.i121.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=http://chile.travel/que-hacer/vinos-y-gastronomia/gastronomia-tipica'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=http://www.chile.travel/que-hacer/vinos-y-gastronomia/gastronomia-tipica'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i4.i112.image.js:image/base/js*/
@@ -1005,7 +1005,7 @@ document.getElementById('i110').addEventListener('click', function(e){
 /* Name: On Click; */
 document.getElementById('i112').addEventListener('click', function(e){
     /*#i118.i119.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://twitter.com/home?status=http://chile.travel/que-hacer/vinos-y-gastronomia/gastronomia-tipica'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://twitter.com/home?status=http://www.chile.travel/que-hacer/vinos-y-gastronomia/gastronomia-tipica'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i4.i114.image.js:image/base/js*/
@@ -1014,7 +1014,7 @@ document.getElementById('i112').addEventListener('click', function(e){
 /* Name: On Click; */
 document.getElementById('i114').addEventListener('click', function(e){
     /*#i116.i117.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://plus.google.com/share?url=http://chile.travel/que-hacer/vinos-y-gastronomia/gastronomia-tipica'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://plus.google.com/share?url=http://www.chile.travel/que-hacer/vinos-y-gastronomia/gastronomia-tipica'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i91.i146.actions.js:actions/base/js*/
