--- a/Grupo salud bucal/Cube-spanish3d.html
+++ b/Grupo salud bucal/Cube-spanish3d.html
@@ -881,6 +881,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i5.i122.image.css:image/base/css*/
 #i122 { opacity: 1; }
+    
+    #whatsapp{
+        position: absolute; top: 0%; left: 0%; overflow: hidden; width: 27px; height: 27px;
+        -ms-transform: translate(0, 0) translate(90px, 218px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(90px, 218px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(90px, 218px) rotate(0deg);
+        transform: translate(0, 0) translate(90px, 218px) rotate(0deg);     
+    }
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -894,7 +902,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">Implantes dentales desde $10'000.00 pesos en CDMX, incluye corona metal porcelana.</div>
+<div id="i14">Implantes dentales desde $10'000 pesos en CDMX, incluye corona metal porcelana.</div>
 <!--#/#--><!--#i4.i56.image.html:image/html-->
 <img id="i56" src="https://i.imgur.com/cA3x2LB.jpg"/>
 <!--#/#--><!--#i4.i104.image.html:image/html-->
@@ -906,6 +914,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i114.image.html:image/html-->
 <img id="i114" src="https://i.imgur.com/jo9wDIZ.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
+<img  id="whatsapp" src="https://i.imgur.com/eyhyCtS.png"/>
 <div id="i91"></div>
 <!--#/#-->
 </div>
@@ -916,7 +925,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i24.text.html:text/html-->
 <div id="i24">Implantes dentales sin cirugía, sin dolor, sin inflamación solo en Grupo Salud Bucal.</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/1enOHza.jpg"/>
+<img id="i58" src="https://i.imgur.com/jWHPC11.jpg"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#--><!--#i5.i108.image.html:image/html-->
@@ -928,6 +937,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i5.i126.image.html:image/html-->
 <img id="i126" src="https://i.imgur.com/jo9wDIZ.png"/>
 <!--#/#-->
+<img id="whatsapp" src="https://i.imgur.com/eyhyCtS.png"/>
+
 </div>
 <!--#/#--><!--#i2.i6.cube-panel.html:cube-panel/html-->
 <div id="i6" class="panel-content-holder">
@@ -948,6 +959,8 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i138.image.html:image/html-->
 <img id="i138" src="https://i.imgur.com/jo9wDIZ.png"/>
 <!--#/#-->
+<img id="whatsapp" src="https://i.imgur.com/eyhyCtS.png"/>
+
 </div>
 <!--#/#-->
     </div>
@@ -1101,7 +1114,11 @@ document.getElementById('i138').addEventListener('click', function(e){
 /*#/#*/
 });
 /*#/#*/
-
+document.getElementById('whatsapp').addEventListener('click', function(e){
+    /*#i144.i145.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'whatsapp://send?text=http://www.implantesdentalesgsb.com/'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
   function next(){
              cube_i2.rotate(cube_i2.ROTATE_NEXT)
         }
