--- a/AmericanExpress/fijo.html
+++ b/AmericanExpress/fijo.html
@@ -191,7 +191,7 @@
             height: 15px;
             text-align: center;
             margin-top: 7.5px;
-            margin-right: -5px
+            margin-right: 2.5px
         }
 	 </style> 
 </head>
@@ -216,7 +216,7 @@
                         </span> 
                         <img class="logo" src="https://i.imgur.com/h2vfz37.png"  style="height:40px"> 
                     </div>
-                    <div id="botones-para-compartir" style="display:inline;float:left;margin-top:5.5px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.americanexpress.com/mx/content/cards/gold-elite-credit-card.html" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="20" src="http://4.bp.blogspot.com/-2W3Fr7nS-T0/Uh1HrkLe5wI/AAAAAAAAAiQ/0-_aC8Yici4/s1600/facebook.png" title="compartir en facebook" width="20" /></a><a class="shared" href="https://plus.google.com/share?url=https://www.americanexpress.com/mx/content/cards/gold-elite-credit-card.html" target="_blank"> <img alt="compartir en google+" class="googlei" height="20" src="http://3.bp.blogspot.com/-Ioy5JWv_nwk/Uh1HlxE8urI/AAAAAAAAAhc/q_uUabDAhsU/s1600/Google%252B%2Balt.png" title="compartir en google+" width="20" /></a><a class="shared" href="https://twitter.com/home?status=https://www.americanexpress.com/mx/content/cards/gold-elite-credit-card.html" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="20" src="http://3.bp.blogspot.com/-TgonF6vzJs0/Uh1Hmxqk8aI/AAAAAAAAAiA/MdT4pRWKRbI/s1600/twitter.png" title="compartir en twitter" width="20" /></a> </span></div>
+                    <div id="botones-para-compartir" style="display:inline;float:left;margin-top:5.5px;margin-left:5px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.americanexpress.com/mx/content/cards/gold-elite-credit-card.html" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="20" src="http://4.bp.blogspot.com/-2W3Fr7nS-T0/Uh1HrkLe5wI/AAAAAAAAAiQ/0-_aC8Yici4/s1600/facebook.png" title="compartir en facebook" width="20" /></a><a class="shared" href="https://plus.google.com/share?url=https://www.americanexpress.com/mx/content/cards/gold-elite-credit-card.html" target="_blank"> <img alt="compartir en google+" class="googlei" height="20" src="http://3.bp.blogspot.com/-Ioy5JWv_nwk/Uh1HlxE8urI/AAAAAAAAAhc/q_uUabDAhsU/s1600/Google%252B%2Balt.png" title="compartir en google+" width="20" /></a><a class="shared" href="https://twitter.com/home?status=https://www.americanexpress.com/mx/content/cards/gold-elite-credit-card.html" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="20" src="http://3.bp.blogspot.com/-TgonF6vzJs0/Uh1Hmxqk8aI/AAAAAAAAAiA/MdT4pRWKRbI/s1600/twitter.png" title="compartir en twitter" width="20" /></a> </span></div>
                 </div>
             </div>
         </a>
