--- a/Roca/fade.html
+++ b/Roca/fade.html
@@ -135,7 +135,7 @@
 
         .tgx_text_title {
             font-size: 90%;
-            color: #453936;
+            color: black;
             display: inline-block;
             width: 100%;
             margin-bottom: -5px;
