--- a/Desafio/slider.html
+++ b/Desafio/slider.html
@@ -9,7 +9,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'https://usolovedelatecnologia.com/?utm_source=mailing&utm_source=Webads&utm_medium=display&utm_term=display_notlf&utm_content=Ros-Brandedcontentagencialike-DHFP&utm_campaign=Brandedcontentagencialike&AAC_PROMO_CODE=&dclid=CKmsvujmudwCFa-oUQodXicBAghttps://usolovedelatecnologia.com/?utm_source=mailing&utm_source=Webads&utm_medium=display&utm_term=display_notlf&utm_content=Ros-Brandedcontentagencialike-DHFP&utm_campaign=Brandedcontentagencialike&AAC_PROMO_CODE=&dclid=CKmsvujmudwCFa-oUQodXicBAg';
+                adfClickTAGUrl = 'https://mx.tuhistory.com/microsites/desafio-sobre-fuego/home';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
@@ -241,16 +241,26 @@
      <a href="%%c1;cpdir=" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
                <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">¡Reserva ya!</span></div>
-                <div class="te-images"> <img src="https://i.imgur.com/DTPcFV2.jpg" alt="" /> <img src="https://i.imgur.com/CPczSJx.jpg" alt="" /> <img src="https://i.imgur.com/XerqHet.jpg" alt="" /> </div>
-                <div class="te-cover"> <img src="https://i.imgur.com/DTPcFV2.jpg" alt="" /> </div>
+                <div class="te-images"> 
+                <img src="https://i.imgur.com/DTPcFV2.jpg" alt="" /> 
+                <img src="https://i.imgur.com/CPczSJx.jpg" alt="" /> 
+                <img src="https://i.imgur.com/XerqHet.jpg" alt="" /> </div>
+                <div class="te-cover"> 
+                <img src="https://i.imgur.com/DTPcFV2.jpg" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
                 </div>
                 <div style="margin-top:18px; margin-left:0px; margin-right: 10px;">
-                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:25px; text-align:left;">Agencia de viajes LIKE </span> <img class="logo" style="margin-top: 32px;" src="https://i.imgur.com/hT5ahC1.png" alt=""> </div>
-                </div>
-                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:21px;margin-left:7px;"> <span> <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://usolovedelatecnologia.com/?utm_source=mailing&utm_source=Webads&utm_medium=display&utm_term=display_notlf&utm_content=Ros-Brandedcontentagencialike-DHFP&utm_campaign=Brandedcontentagencialike&AAC_PROMO_CODE=&dclid=CKmsvujmudwCFa-oUQodXicBAghttps://usolovedelatecnologia.com/?utm_source=mailing&utm_source=Webads&utm_medium=display&utm_term=display_notlf&utm_content=Ros-Brandedcontentagencialike-DHFP&utm_campaign=Brandedcontentagencialike&AAC_PROMO_CODE=&dclid=CKmsvujmudwCFa-oUQodXicBAg" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="22" /></a><a class="shared" href="https://plus.google.com/share?url=https://usolovedelatecnologia.com/?utm_source=mailing&utm_source=Webads&utm_medium=display&utm_term=display_notlf&utm_content=Ros-Brandedcontentagencialike-DHFP&utm_campaign=Brandedcontentagencialike&AAC_PROMO_CODE=&dclid=CKmsvujmudwCFa-oUQodXicBAghttps://usolovedelatecnologia.com/?utm_source=mailing&utm_source=Webads&utm_medium=display&utm_term=display_notlf&utm_content=Ros-Brandedcontentagencialike-DHFP&utm_campaign=Brandedcontentagencialike&AAC_PROMO_CODE=&dclid=CKmsvujmudwCFa-oUQodXicBAg" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/dC7ka2p.png" title="compartir en google+" width="22" /></a><a class="shared" href="https://twitter.com/home?status=https://usolovedelatecnologia.com/?utm_source=mailing&utm_source=Webads&utm_medium=display&utm_term=display_notlf&utm_content=Ros-Brandedcontentagencialike-DHFP&utm_campaign=Brandedcontentagencialike&AAC_PROMO_CODE=&dclid=CKmsvujmudwCFa-oUQodXicBAghttps://usolovedelatecnologia.com/?utm_source=mailing&utm_source=Webads&utm_medium=display&utm_term=display_notlf&utm_content=Ros-Brandedcontentagencialike-DHFP&utm_campaign=Brandedcontentagencialike&AAC_PROMO_CODE=&dclid=CKmsvujmudwCFa-oUQodXicBAg" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/YN2Vf5g.png" title="compartir en twitter" width="22" /></a> </span></div>
+                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:25px; text-align:left;">Agencia de viajes LIKE </span></div>
+
+                    
+                    <img class="logo" style="margin-top: 32px;" src="https://i.imgur.com/hT5ahC1.png" alt=""> </div>
+                    
+                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:21px;margin-left:7px;"> <span> 
+                <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://mx.tuhistory.com/microsites/desafio-sobre-fuego/home" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="22" /></a>
+                <a class="shared" href="https://plus.google.com/share?url=https://mx.tuhistory.com/microsites/desafio-sobre-fuego/home" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/dC7ka2p.png" title="compartir en google+" width="22" /></a>
+                <a class="shared" href="https://twitter.com/home?status=https://mx.tuhistory.com/microsites/desafio-sobre-fuego/home" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/YN2Vf5g.png" title="compartir en twitter" width="22" /></a> </span></div>
             </div>
         </a>
     </div>
