--- a/Desafio/slider.html
+++ b/Desafio/slider.html
@@ -70,12 +70,12 @@
             .cta {
             position: absolute;
             bottom: 85px;
-            width: 100px;
+            width: 80px;
             line-height: 1.3em;
             z-index: 5;
-            margin-left: 48%;
+            margin-left: 52%;
             left: -55px;
-            background-color: #fa820a;
+            background-color: #ff8a00;
             padding: 5px;
             border-radius: 20px;
             text-align: center;
@@ -240,24 +240,24 @@
 	 <div class="te-container">
      <a href="%%c1;cpdir=" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
-               <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">¡Reserva ya!</span></div>
+               <div class="cta"><span class="bzm_text_title bzm_text_bold" style="font-size:80%; color: white;">¿Afilado?</span></div>
                 <div class="te-images"> 
-                <img src="https://i.imgur.com/DTPcFV2.jpg" alt="" /> 
-                <img src="https://i.imgur.com/CPczSJx.jpg" alt="" /> 
-                <img src="https://i.imgur.com/XerqHet.jpg" alt="" /> </div>
+                <img src="https://i.imgur.com/p8THlMT.png" alt="" /> 
+                <img src="https://i.imgur.com/YFgmahb.png" alt="" /> 
+                <img src="https://i.imgur.com/4LKpnC3.png" alt="" /> </div>
                 <div class="te-cover"> 
-                <img src="https://i.imgur.com/DTPcFV2.jpg" alt="" /> </div>
+                <img src="https://i.imgur.com/p8THlMT.png" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
                 </div>
-                <div style="margin-top:18px; margin-left:0px; margin-right: 10px;">
-                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:25px; text-align:left;">Agencia de viajes LIKE </span></div>
+                <div style="margin-top:15px; margin-left:0px; margin-right: 10px;">
+                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000000; font-size:16px; text-align:left;">¿Eres de los que piensa que las espadas son decoración en la pared?</span></div>
 
                     
-                    <img class="logo" style="margin-top: 32px;" src="https://i.imgur.com/hT5ahC1.png" alt=""> </div>
+                    <img class="logo" style="margin-top: -3px;" src="https://i.imgur.com/oAJM198.png" alt=""> </div>
                     
-                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:21px;margin-left:7px;"> <span> 
+                <div id="botones-para-compartir" style="display:inline;float:left;margin-top:5px;margin-left:7px;"> <span> 
                 <a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://mx.tuhistory.com/microsites/desafio-sobre-fuego/home" target="_blank"> <img alt="compartir en facebook" class="facebooki" height="22" src="https://i.imgur.com/mJBNNLr.png" title="compartir en facebook" width="22" /></a>
                 <a class="shared" href="https://plus.google.com/share?url=https://mx.tuhistory.com/microsites/desafio-sobre-fuego/home" target="_blank"> <img alt="compartir en google+" class="googlei" height="22" src="https://i.imgur.com/dC7ka2p.png" title="compartir en google+" width="22" /></a>
                 <a class="shared" href="https://twitter.com/home?status=https://mx.tuhistory.com/microsites/desafio-sobre-fuego/home" target="_blank"> <img alt="compartir en twitter" class="twitteri" height="22" src="https://i.imgur.com/YN2Vf5g.png" title="compartir en twitter" width="22" /></a> </span></div>
