--- a/ADIDAS/videoext.html
+++ b/ADIDAS/videoext.html
@@ -240,7 +240,7 @@
     <div class="videoext_wrapper carousel-wrapper size_320x480" id="cta";">
          <a href="https://www.adidas.pe/hombre" style="display: block;" target="block">
          <div class="carousel-container">
-            <iframe style="margin-left:-70px;" width="510" height="290"src="https://www.youtube.com/embed/3c0Cy1F6km4?rel=0&autoplay=1&modestbranding=0&playlist=3c0Cy1F6km4&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe style="margin-left:-70px;" width="510" height="290"src="https://www.youtube.com/embed/3c0Cy1F6km4?rel=0&autoplay=1&modestbranding=1&playlist=3c0Cy1F6km4&loop=1&controls=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
        
         <div class="videoext_cover bg cover-1 carousel-item item-1">
