--- a/Chubb/videobig.html
+++ b/Chubb/videobig.html
@@ -36,13 +36,13 @@
         }
 
         .tgx_wrapper.size_320x480 {
-            width: 300px;
-            height: 600px;
+            width: 298px;
+            height: 598px;
         }
 
         .tgx_wrapper.size_320x50 {
-            width: 300px;
-            height: 600px;
+            width: 298x;
+            height: 598px;
         }
 
         .tgx_wrapper.size_728x90 {
