--- a/Chubb/video3.html
+++ b/Chubb/video3.html
@@ -282,7 +282,7 @@
            
         <div class="videonew_text"> 
             <span class="videonew_text_title videonew_text_bold">
-              Si estas innovando en tu empresa, minimiza los riesgos.
+              Si estás innovando en tu empresa, minimiza los riesgos.
             </span>
            
 
