--- a/Chubb/video2.html
+++ b/Chubb/video2.html
@@ -274,7 +274,7 @@
 <body class="videonew">
     <div class="videonew_wrapper carousel-wrapper size_320x480" id="cta">
         <div class="carousel-container">
-            <iframe style="margin-left: -10px" width="320" height="160" src="https://www.youtube.com/embed/OwaMgEONqnk?rel=0&autoplay=1&modestbranding=0&playlist=OwaMgEONqnk&loop=1&controls=0&mute=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <iframe style="margin-left: -10px" width="320" height="160" src="https://www.youtube.com/embed/OwaMgEONqnk?rel=0&autoplay=1&modestbranding=0&playlist=OwaMgEONqnk&loop=0&controls=1&mute=0" onmouseover="this.src=playersrc+'=0'" onmouseout="this.src=playersrc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <div onclick="openUrl();">
        
