--- a/Car Week Septiembre/Cube2.html
+++ b/Car Week Septiembre/Cube2.html
@@ -759,7 +759,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i248.i249.shape.html:shape/html-->
 <div id="i249"></div>
 <!--#/#--><!--#i248.i251.image.html:image/html-->
-<img id="i251" src="https://i.imgur.com/03l3J67.png"/>
+<img id="i251" src="https://i.imgur.com/mhBP0BM.png"/>
 <!--#/#--><!--#i248.i259.shape.html:shape/html-->
 <div id="i259"></div>
 <!--#/#-->
@@ -846,7 +846,7 @@ document.getElementById('i259').addEventListener('click', function(e){
 /* Name: On Click; */
 
 /*#/#*//*#i275.i276.actions-clicktag.js:actions-clicktag/base/js.1*/
-  
+   
 /*#/#*/
 
   function next(){
