--- a/Chubb/video2.html
+++ b/Chubb/video2.html
@@ -278,7 +278,7 @@
                         var playersrc;
 
                     </script>
-                    <iframe class="videonew" id="JSytplayer" width="300" height="160" src="https://www.youtube.com/embed/4s4au9oWPMI?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=1" onmouseover="this.src=playersrc+'=0'" onmouseout="this.src=playersrc+'mute=0'" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    <iframe class="videonew" id="JSytplayer" width="300" height="160" src="https://www.youtube.com/embed/4s4au9oWPMI?rel=0&autoplay=1&modestbranding=0&loop=1&controls=0&mute=1" onmouseover="this.src=playersrc+'=0'" onmouseout="this.src=playersrc+'mute=0'"frameborder="0" allow="autoplay=1; encrypted-media" allowfullscreen></iframe>
                     <script>
                         playersrc = document.getElementById('JSytplayer').src;
 
