--- a/ADIDAS/videos new/Video.html
+++ b/ADIDAS/videos new/Video.html
@@ -70,7 +70,7 @@
 			</div>
 
 			<div style="bottom:0px;height: 18px;text-align:right;margin-top:-5px;">
-			<img src="https://i.imgur.com/U1PvKPo.png" style="height:34px; margin-top:0px; margin-right:5px;">
+			<img src="https://i.imgur.com/WsiyDqu.png" style="height:34px; margin-top:0px; margin-right:5px;">
 				<div id="botones-para-compartir" style="display:inline;float:left;margin-left:7px;margin-top:-30px;">
 						<span>  
 							<a class="shared" href="https://www.facebook.com/sharer/sharer.php?u=https://www.adidas.pe/hombre"  target="block">    
